# roitelet-llm

./: .env.example  .gitignore  Dockerfile  INSTALL.md  INSTALLER.md  LICENSE  LISEZMOI.md  MANUAL.md  MECHANISM.md  MODEDEMPLOI.md  Makefile  PSEUDO.md  README.md  docker-compose.yml  environment.yaml  pyproject.toml  requirements.txt  start.sh  streamlit_app.py
.deepeval/: .deepeval_telemetry.txt
api/: main.py
app/: config.py  main.py  schemas.py  storage.py
app/core/: capabilities.py  device.py  energy.py  fusion.py  judge.py  pipeline.py  registry.py  router.py
app/providers/: __init__.py  base.py  ollama.py  openai_compatible.py
cli/: __main__.py  main.py
core/: __init__.py  capabilities.py  capability_classifier.py  commands.py  config.py  device.py  energy.py  image_pipeline.py  judge.py  mcp.py  personal.py  pipeline.py  pseudo.py  regimes.py  registry.py  router.py  router_calibrated.py  router_mf.py  router_protocol.py  schemas.py  storage.py  storage_mongo.py  storage_protocol.py
core/core/: energy.py  judge.py  pipeline.py  registry.py  router.py
core/multimodal/: __init__.py  audio.py  image.py  pdf.py  website.py
core/providers/: __init__.py  base.py  factory.py  ollama.py  openai_compatible.py  openai_images.py
data/bootstrap/: model_priors.json
docs/: ADDING_LOCAL_LLM.md  ADDING_MODELS.md  ADDING_PAID_LLM.md  ARCHITECTURE.md  EVALUATION.md  IMAGE_GENERATION.md  OPENAI_COMPAT.md  PERSONAL_MODE.md  PRIVACY.md  PSEUDO.md  SLASH_COMMANDS.md
gui/: main.py
roitelet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
roitelet_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: crawl_arena.py  pull_defaults.sh  run_mtbench_overnight.sh  vendor_web_assets.sh
tests/: test_api.py  test_api_personal.py  test_capability_classifier.py  test_cli.py  test_commands.py  test_core.py  test_gui.py  test_image_pipeline.py  test_personal.py  test_pipeline.py  test_pseudo.py  test_roitelet.py  test_router_mf.py  test_scripts.py
tests/eval/: README.md  bench_mtbench.py  bench_pareto.py  conftest.py  dataset.json  test_judge_quality.py  test_pseudo_quality.py
web/: app.js  i18n.js  index.html
