[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roitelet-llm"
version = "0.1.0"
description = "Local-first adaptive LLM router with parallel inference and local synthesis."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Warith Harchaoui", email = "warith@deraison.ai"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "orjson>=3.10.15",
    "scikit-learn>=1.6.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",  # also used in tests
    "ruff>=0.4.0",
]
# Answer-quality evaluation suite. Not loaded by the default test run.
# Install with: pip install -e .[eval]   then: pytest -m eval -q
#
# DeepEval is pinned to the stable 3.x family. The import surface we use
# (`deepeval.metrics`, `deepeval.test_case`, `deepeval.models.base_model`)
# has held across all 3.x patches but DeepEval has rebroken metrics
# silently in major bumps before — bump the upper bound only after
# re-running `pytest -m eval` end-to-end with the candidate version.
eval = [
    "deepeval>=3.0,<4.0",
]
# Multimodal inputs.
#   Audio = whisper.cpp (transcription) + NeMo Sortformer (diarization).
#     NeMo pulls PyTorch + Lightning + Hydra (~2 GB).
#   PDF   = kreuzberg (pdfium text layer, Tesseract OCR fallback).
#   Image = Ollama VLM at runtime (qwen2.5vl:7b by default) — no extra
#           Python deps, the local Ollama server does the work.
# Kept optional so the OSS quick-start stays light. Install with:
#   pip install -e .[multimodal]
multimodal = [
    "pywhispercpp>=1.4",
    "nemo-toolkit[asr]>=2.1",
    "soundfile>=0.12",
    "audio-helper>=0.1",
    "kreuzberg>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: answer-quality tests that hit a real local Ollama judge — slow, network-dependent, excluded from the default run",
]
# Default run skips the eval marker. Use `pytest -m eval` to include it.
addopts = "-m 'not eval'"
