[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roitelet-llm"
version = "0.1.0"
description = "Local-first adaptive LLM router with parallel inference and local synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith Harchaoui"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "orjson>=3.10.15",
    "scikit-learn>=1.6.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",  # also used in tests
    "ruff>=0.4.0",
]
# Answer-quality evaluation suite. Not loaded by the default test run.
# Install with: pip install -e .[eval]   then: pytest -m eval -q
#
# DeepEval is pinned to the stable 3.x family. The import surface we use
# (`deepeval.metrics`, `deepeval.test_case`, `deepeval.models.base_model`)
# has held across all 3.x patches but DeepEval has rebroken metrics
# silently in major bumps before — bump the upper bound only after
# re-running `pytest -m eval` end-to-end with the candidate version.
eval = [
    "deepeval>=3.0,<4.0",
]
# Multimodal inputs.
#   Audio = whisper.cpp (transcription) + NeMo Sortformer (diarization).
#     NeMo pulls PyTorch + Lightning + Hydra (~2 GB).
#   PDF   = kreuzberg (pdfium text layer, Tesseract OCR fallback).
#   Image = Ollama VLM at runtime (qwen2.5vl:7b by default) — no extra
#           Python deps, the local Ollama server does the work.
# Kept optional so the OSS quick-start stays light. Install with:
#   pip install -e .[multimodal]
multimodal = [
    "pywhispercpp>=1.4",
    "nemo-toolkit[asr]>=2.1",
    "soundfile>=0.12",
    "audio-helper>=0.1",
    "kreuzberg>=3.0",
    # Website ingestion. ``firecrawl-py`` calls Firecrawl Cloud by
    # default (FIRECRAWL_API_KEY) or a self-hosted instance
    # (FIRECRAWL_API_URL). See core/multimodal/website.py.
    "firecrawl-py>=2.0",
]
# Personal-mode ANN retrieval. The base install ships a pure-numpy
# brute-force scan that's perfectly adequate up to a few thousand
# wiki chunks; the `[personal]` extra installs `turbovec` (Rust + Python
# bindings, MIT) for compressed ANN search that stays sub-millisecond
# at 100k+ chunks with ~16× embedding compression. Install with:
#   pip install -e .[personal]
# The retrieval path auto-detects turbovec at runtime; both code
# paths share the same persistent on-disk embeddings cache so the
# embedding model is invoked once per chunk per wiki revision, not
# once per query.
personal = [
    "turbovec>=0.5",
]
# Optional production-scale storage backend. The default JSON-per-file
# backend (data/conversations/*.json, data/telemetry/*.json) is fine
# for a single-user laptop. Beyond a few thousand telemetry rows,
# switch to MongoDB via:
#   pip install -e .[scale]
#   ROITELET_STORAGE_BACKEND=mongodb
#   ROITELET_MONGO_URI=mongodb://localhost:27017
# See core/storage_mongo.py for the indexes and trade-offs.
scale = [
    "pymongo>=4.6",
]

[project.scripts]
# Console-script shim so `pip install -e .` exposes a `roitelet` binary that
# matches the docs and the test harness (`argv = ['roitelet', ...]`). Without
# this, only the fallback `python -m cli` form works.
roitelet = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E/F/I/UP/B/SIM are the syntax + modernisation gate (always on).
# D is pydocstyle — numpydoc convention — applied to the public
# library surface only (core/, api/, cli/). Tests and scripts use a
# looser style and are excluded below.
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

# A pragmatic numpydoc gate: enforce summary lines and section
# discipline, but skip the rules that fight a real codebase
# (D203/D213 conflict with D211/D212; D104 demands docstrings on
# every __init__.py; D107 demands separate __init__ docstrings even
# when the class docstring covers them).
ignore = [
    "D100",  # missing docstring in public module — many small protocol files
    "D104",  # missing docstring in public package (__init__.py)
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__ (class docstring covers it)
    "D203",  # 1 blank line before class docstring (we use D211 instead)
    "D212",  # multi-line summary on first line (we use D213)
    "D413",  # blank line after last section (numpydoc allows omission)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Tests, scripts, and the eval harness use a more freeform docstring
# style; the public library surface in core/, api/, cli/ is what the
# D rules gate.
"tests/**" = ["D"]
"scripts/**" = ["D"]

# FastAPI's idiomatic dependency-injection pattern uses ``Depends(...)``
# and ``Header(default=...)`` as parameter defaults; ruff's B008 flags
# any function-call default. Whitelist the FastAPI/Pydantic helpers we
# rely on so the project's API surface stays idiomatic.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "pydantic.Field",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: answer-quality tests that hit a real local Ollama judge — slow, network-dependent, excluded from the default run",
]
# Default run skips the eval marker. Use `pytest -m eval` to include it.
addopts = "-m 'not eval'"
